--- a/src/ext/.gitignore
+++ b/src/ext/.gitignore
@@ -4,11 +4,8 @@
 *.so
 
 # Folders
-_obj/
-_test/
-bin/
-pkg/
-src/github.com/
+_obj
+_test
 
 # Architecture specific extensions/prefixes
 *.[568vq]
@@ -23,3 +20,4 @@ _cgo_export.*
 _testmain.go
 
 *.exe
+*.test
